[gd_scene load_steps=18 format=3 uid="uid://cdte1ap64137r"]

[ext_resource type="Texture2D" uid="uid://cwa1muaemudlf" path="res://assets/players/player_1/player1.png" id="1_6iv2e"]
[ext_resource type="Script" uid="uid://cmr5w7y8yedix" path="res://scripts/tutorial_screen.gd" id="1_owd46"]
[ext_resource type="Texture2D" uid="uid://dxhenu354545j" path="res://assets/players/player_2/player2.png" id="2_6t5s3"]
[ext_resource type="Texture2D" uid="uid://bkl0613yc7nj" path="res://assets/tilesets/additional decorations.png" id="3_6t5s3"]
[ext_resource type="Texture2D" uid="uid://dpux62bdnlnpv" path="res://assets/players/player_3/player3.png" id="3_owd46"]
[ext_resource type="FontFile" uid="uid://b2duawo6i6gd8" path="res://assets/fonts/ModernDOS8x16.ttf" id="4_5im2b"]

[sub_resource type="Gradient" id="Gradient_8ucgo"]
colors = PackedColorArray(0, 0, 0, 1, 0.09803922, 0.039215688, 0.13725491, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6qs70"]
gradient = SubResource("Gradient_8ucgo")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_6t5s3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6iv2e"]
resource_name = "p_1_tutorial_walk"
length = 4.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 8, 9, 10, 11, 4, 5, 6, 7, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_owd46"]
_data = {
&"RESET": SubResource("Animation_6t5s3"),
&"p_1_tutorial_walk": SubResource("Animation_6iv2e")
}

[sub_resource type="Animation" id="Animation_5im2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_owd46"]
resource_name = "object_changing_tutorial_screen"
length = 3.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ucgo"]
_data = {
&"RESET": SubResource("Animation_5im2b"),
&"object_changing_tutorial_screen": SubResource("Animation_owd46")
}

[sub_resource type="Animation" id="Animation_6qs70"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_8ucgo"]
resource_name = "p_3_tutorial_screen_walking"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uneh"]
_data = {
&"RESET": SubResource("Animation_6qs70"),
&"p_3_tutorial_screen_walking": SubResource("Animation_8ucgo")
}

[node name="tutorial_screen" type="Node2D"]
script = ExtResource("1_owd46")

[node name="tutorial_bg" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6qs70")

[node name="player_1_tutorial_screen_sprite" type="Sprite2D" parent="."]
position = Vector2(240, 128)
scale = Vector2(3, 3)
texture = ExtResource("1_6iv2e")
hframes = 4
vframes = 4

[node name="p_1_tutorial_screen_animation" type="AnimationPlayer" parent="player_1_tutorial_screen_sprite"]
libraries = {
&"": SubResource("AnimationLibrary_owd46")
}

[node name="player_2_tutorial_screen_sprite" type="Sprite2D" parent="."]
position = Vector2(240.00003, 272)
scale = Vector2(3, 3)
texture = ExtResource("2_6t5s3")
hframes = 4
vframes = 4

[node name="object_tutorial_screen_sprite" type="Sprite2D" parent="."]
position = Vector2(352, 272)
scale = Vector2(3, 3)
texture = ExtResource("3_6t5s3")
hframes = 4
vframes = 2
frame = 4

[node name="object_tutorial_screen_animation" type="AnimationPlayer" parent="object_tutorial_screen_sprite"]
libraries = {
&"": SubResource("AnimationLibrary_8ucgo")
}

[node name="player_3_tutorial_screen_sprite" type="Sprite2D" parent="."]
position = Vector2(240.00003, 416)
scale = Vector2(3, 3)
texture = ExtResource("3_owd46")
hframes = 4
vframes = 4
frame = 12

[node name="p_3_tutorial_screen_animation" type="AnimationPlayer" parent="player_3_tutorial_screen_sprite"]
libraries = {
&"": SubResource("AnimationLibrary_8uneh")
}

[node name="movement_info_label" type="Label" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 80.0
offset_right = 960.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5im2b")
theme_override_font_sizes/font_size = 24
text = "Use [W, A, S, D] keys to move your character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="interaction_info_label" type="Label" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 224.0
offset_right = 960.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5im2b")
theme_override_font_sizes/font_size = 24
text = "Use [E] to interact with objects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nightvision_info_label" type="Label" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 368.0
offset_right = 960.0
offset_bottom = 464.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5im2b")
theme_override_font_sizes/font_size = 24
text = "During LVL 3:
Use [N] to toggle NIGHT VISION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tutorial_screen_back_button" type="Button" parent="."]
custom_minimum_size = Vector2(303, 72)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 424.5
offset_top = 540.0
offset_right = 727.5
offset_bottom = 612.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_5im2b")
theme_override_font_sizes/font_size = 20
text = "Return"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="tutorial_screen_back_button" to="." method="_on_tutorial_screen_back_button_pressed"]
